[gd_scene load_steps=2 format=2]

[ext_resource path="res://tela_inicial.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 363.0
margin_top = 292.0
margin_right = 655.0
margin_bottom = 371.0
text = "Pressione"
icon_align = 1

[node name="dado1" type="LineEdit" parent="."]
margin_left = 211.0
margin_top = 148.0
margin_right = 344.0
margin_bottom = 219.0

[node name="dado2" type="LineEdit" parent="."]
margin_left = 441.0
margin_top = 151.0
margin_right = 574.0
margin_bottom = 222.0

[node name="dado3" type="LineEdit" parent="."]
margin_left = 676.0
margin_top = 151.0
margin_right = 809.0
margin_bottom = 222.0

[node name="Label" type="Label" parent="."]
margin_left = 214.0
margin_top = 116.0
margin_right = 339.0
margin_bottom = 142.0
text = "Dado 1:"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 444.0
margin_top = 120.0
margin_right = 569.0
margin_bottom = 146.0
text = "Dado 2:"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 680.0
margin_top = 120.0
margin_right = 805.0
margin_bottom = 146.0
text = "Dado 3:"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 217.0
margin_top = 415.0
margin_right = 817.0
margin_bottom = 568.0
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="resposta" type="RichTextLabel" parent="ColorRect"]
margin_left = 23.0
margin_top = 19.0
margin_right = 578.0
margin_bottom = 133.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
